kubernetes/manifests/figalize.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  figalize
  namespace: default
  labels:
    app:  figalize
spec:
  selector:
    matchLabels:
      app: figalize
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  figalize
    spec:
      containers:
      - name:  figalize
        image:  realscorp/figalize:0.3.2
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 400Mi
        readinessProbe:
          httpGet:
            path: /api/healthz/
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8000
          name:  api
        volumeMounts:
        - name: config-volume
          mountPath: /var/config/
      volumes:
        - name: config-volume
          configMap:
            name: figalize-files
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: figalize
  namespace: default
spec:
  selector:
    app: figalize
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
