kubernetes/manifests/front.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  front
  namespace: default
  labels:
    app:  front
spec:
  selector:
    matchLabels:
      app: front
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  front
    spec:
      containers:
      - name:  front
        image:  realscorp/figachechnaya-front:0.3.2
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 400m
            memory: 300Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  http
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx/conf.d/
      volumes:
        - name: config-volume
          configMap:
            name: front
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: default
spec:
  selector:
    app: front
  type: ClusterIP
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
